--- a/vite-project-dynamic/index.html
+++ b/vite-project-dynamic/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Karla:wght@500;700&display=swap&family=Anton&display=swap" rel="stylesheet">    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Meme Generator</title>
   </head>
   <body>
     <div id="root"></div>
